# youtube-automation

./: .env.example  .env.tpl  .envrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  ONBOARDING.md  README.md  adjust_tempo.sh  analytics_display.py  analytics_system.py  archive_to_gdrive.sh  auth_test.py  auto_post_comment.py  auto_post_comment.sh  benchmark_collector.py  bulk_rebrand_update.py  bulk_reschedule.py  bulk_update_descriptions_from_md.py  bulk_update_localizations.py  bulk_update_short_localizations.py  bunfig.toml  community_draft.py  compare_thumbnails.py  cross_link.py  daily_collect.sh  execution-notes.md  fetch_benchmark_comments.py  fix_per_theme_timestamps.py  flake.nix  generate_image.py  generate_loop_video.py  generate_master.sh  generate_music.py  generate_music_dj.py  generate_short_loop.py  (+26 more)
.claude/: CLAUDE.md  CLAUDE.template.md  settings.json  settings.local.json  settings.template.json
.codex/: takt-open-issues-execution-notes.md
.githooks/: pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.lefthook/: install.sh  setup-worktree.sh  sync-deps.sh  worktree-tmpdir.sh
.takt/: .gitignore  config.yaml  runtime-prepare.sh
.takt-templates/: README.md
agents/: __init__.py  collection_uploader.py  short_uploader.py  youtube_auto_uploader.py
auth/: SETUP.md  __init__.py  oauth_handler.py
bench/: README.md  __init__.py  bench_benchmark_collector.py  bench_cost_tracker.py  bench_generate_image.py  bench_real_apis.py  bench_skill_size.py  bench_smooth_loop.py  bench_strategic_analytics.py  bench_veo_poll.py  bench_video_daily.py  common.py  main.py
dashboard/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
docs/: architecture.md  changelog-contract.md  channel-workspace-migration.md  chrome-extension-install-guide.md  dashboard.md  development.md  extensions-overlay-brand-colors.md  features.md  media-concat-fps.md  migration-submodule-to-uv.md  oauth-scopes.md  release-skill-update-253.md  roadmap.html  streaming-healthcheck.md  takt-operations.md  workflow-cheatsheet.md
examples/: channel_config.example.json  localizations.example.json
extensions/: .fallow-dupes-baseline.json  .fallowrc.json  .oxlintrc.json  CLAUDE.md  README.md  compile-bench.sh  lint-bench.sh  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml
launchd/: com.youtube-channels.auto-post-comment.plist  com.youtube-channels.daily-collect.plist  daily_collect_all.sh
plans/: 001-serve-distrokid-post-hardening.md  002-distrokid-helper-dep-unification.md  003-distrokid-helper-lint-format-ci.md  004-server-url-constant-consolidation.md  005-skill-authoring-standard.md  006-dry-run-apply-approval-gates.md  007-analytics-report-ctr-doc-fix.md  008-frontmatter-contradictions.md  009-prerequisite-guards.md  010-channel-new-midflow-gate.md  011-live-clean-approval-format.md  012-freshness-single-source.md  013-suno-mode-decision-tree.md  014-partial-download-detection.md  015-postmortem-threshold-rubric.md  016-setup-project-id-truncate.md  017-thumbnail-external-repo-ref.md  018-issue-sibling-entrypoint-enumeration.md  019-takt-review-fix-self-audit.md  020-upload-path-robustness.md  021-bulk-desc-read-modify-write.md  022-analytics-collect-quota-reduction.md  023-delete-dead-analytics-cluster.md  024-toolchain-hygiene.md  025-client-secrets-in-memory.md  026-terraform-stream-env-staging.md  027-argv-absolute-path-hardening.md  README.md
reports/: data-auto-commit.md  data-codex-runtime.md  data-concurrency-resources.md  data-deliverable-verification.md  data-environment-parity.md  data-git-hooks-worktree.md  data-implementation-roadmap.md  data-interrupt-timeout.md  data-preflight.md  data-review-prompts.md  data-supervisor-rejections.md  data-tool-errors.md  data-workflow-transitions.md
scripts/: analytics_system.py  benchmark_collector.py  bulk_update_descriptions_from_md.py  community_draft.py  compare_thumbnails.py  fetch_benchmark_comments.py  fix_per_theme_timestamps.py  gcp-bootstrap.sh  gcp-terraform-apply.sh  generate_image.py  generate_loop_video.py  generate_music.py  generate_music_dj.py  generate_short_loop.py  generate_suno_prompts.py  generate_thumbnail.py  generate_videos.sh  get_channel_status.py  init_collection.py  metadata_audit.py  playlist_manager.py  playlist_status.py  populate_scene_phrases.py  post_upload_actions.py  video_uploader.py  worktree_sync.sh
tests/: _skill_loader.py  conftest.py  test_actions_parallel_workflows.py  test_analytics_analyze_skill_contract.py  test_analytics_analyze_validator.py  test_analytics_cli_integration.py  test_analytics_collect_depth_validator.py  test_analytics_revenue_skill_contract.py  test_analytics_run_state.py  test_analytics_system.py  test_apply_rain_layers.py  test_audience_analytics.py  test_audio_visualizer_fill.py  test_audio_visualizer_mask.py  test_automation_run_state.py  test_automation_schedule_backends.py  test_automation_update.py  test_automation_update_skill.py  test_b3_domain_migration_contract.py  test_b4_auth_resource_contract.py  test_b4_reorganization_contract.py  test_bench_cost_tracker.py  test_benchmark_analyzer.py  test_benchmark_collector_channels_batch.py  test_benchmark_collector_no_fallback.py  test_benchmark_collector_quota_guard.py  test_benchmark_competitor_cli.py  test_benchmark_quota_wiring.py  test_bulk_update_descriptions_from_md.py  test_bulk_update_short_localizations.py  test_bulk_update_synthetic_media.py  test_captions.py  test_captions_upload_cli.py  test_changelog_ci_contract.py  test_channel_analytics.py  test_channel_cli.py  test_channel_config.py  test_channel_import.py  test_channel_init.py  test_channel_new_analysis_mode.py  (+272 more)
utils/: __init__.py  _path_setup.py  analytics_analyzer.py  analytics_base.py  analytics_collector.py  benchmark_analyzer.py  channel_analytics.py  channel_config.py  collection_paths.py  ctr_analytics.py  image_generator.py  logging_setup.py  metadata_generator.py  report_generator.py  secrets.py  strategic_analytics.py  time_utils.py  (+6 more)
(+1264 files in other folders)
