[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-channels-automation"
version = "5.5.1"
description = "YouTube channel automation toolkit - analytics, AI content generation, and auto-upload"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "daiki-beppu"}]
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-genai",
    "openai",
    "Pillow",
    "python-dotenv",
    "pandas",
    "matplotlib",
    "japanize-matplotlib",
    "seaborn",
    "schedule",
    "pyyaml",
    "requests",
]

[project.urls]
Repository = "https://github.com/daiki-beppu/youtube-automation"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
veo = []  # google-genai, Pillow moved to main dependencies

[project.scripts]
# CLI script entry points (yt-* prefix)
yt-analytics = "youtube_automation.scripts.analytics_system:main"
yt-benchmark-collect = "youtube_automation.scripts.benchmark_collector:main"
yt-benchmark-comments = "youtube_automation.scripts.fetch_benchmark_comments:main"
yt-bulk-update-desc = "youtube_automation.scripts.bulk_update_descriptions_from_md:main"
yt-channel-init = "youtube_automation.cli.channel_init:main"
yt-channel-settings = "youtube_automation.scripts.channel_settings_cli:main"
yt-channel-status = "youtube_automation.scripts.get_channel_status:main"
yt-channel-trend = "youtube_automation.scripts.channel_trend:main"
yt-comments-reply = "youtube_automation.scripts.comment_reply:main"
yt-config-migrate = "youtube_automation.cli.config_migrate:main"
yt-cost-report = "youtube_automation.cli.cost_report:main"
yt-discover-competitors = "youtube_automation.scripts.discover_competitors:main"
yt-doctor = "youtube_automation.cli.doctor:main"
yt-fetch-stream-key = "youtube_automation.scripts.fetch_stream_key:main"
yt-finalize-master = "youtube_automation.scripts.finalize_master:main"
yt-fix-timestamps = "youtube_automation.scripts.fix_per_theme_timestamps:main"
yt-generate-image = "youtube_automation.scripts.generate_image:main"
yt-generate-loop-video = "youtube_automation.scripts.generate_loop_video:main"
yt-generate-lyria-master = "youtube_automation.scripts.generate_lyria_master:main"
yt-generate-master = "youtube_automation.scripts.generate_master:main"
yt-generate-suno = "youtube_automation.scripts.generate_suno_prompts:main"
yt-init-collection = "youtube_automation.scripts.init_collection:main"
yt-launch-curve = "youtube_automation.scripts.launch_curve:main"
yt-metadata-audit = "youtube_automation.scripts.metadata_audit:main"
yt-playlist-manager = "youtube_automation.scripts.playlist_manager:main"
yt-playlist-status = "youtube_automation.scripts.playlist_status:main"
yt-populate-scene-phrases = "youtube_automation.scripts.populate_scene_phrases:main"
yt-stream-archive-check = "youtube_automation.scripts.streaming_archive_check:main"
yt-stream-bandwidth = "youtube_automation.cli.stream_bandwidth:main"
yt-theme-compare = "youtube_automation.scripts.theme_compare:main"
yt-thumbnail-compare = "youtube_automation.scripts.compare_thumbnails:main"
yt-thumbnail-correlate = "youtube_automation.scripts.thumbnail_correlate:main"
yt-video-analyze = "youtube_automation.scripts.video_analyze:main"

# Agent entry points
yt-upload-auto = "youtube_automation.agents.youtube_auto_uploader:main"
yt-upload-collection = "youtube_automation.agents.collection_uploader:main"
yt-upload-shorts = "youtube_automation.agents.short_uploader:main"

# Shorts script entry points
yt-generate-shorts-loop = "youtube_automation.scripts.generate_short_loop:main"
yt-shorts-bulk-update-loc = "youtube_automation.scripts.bulk_update_short_localizations:main"

# Skill management
yt-skills = "youtube_automation.cli.skills_sync:main"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_automation"]

[tool.hatch.build.targets.wheel.force-include]
# Claude Code スキルファイルをパッケージ内 _skills/ として同梱
# (yt-skills sync --asset skills が importlib.resources で参照する)
".claude/skills" = "youtube_automation/_skills"
# BGM チャンネル運営方針テンプレ (CLAUDE.md) を _claude_md/ として同梱
# (yt-skills sync --asset claude-md が importlib.resources で参照する)
".claude/CLAUDE.template.md" = "youtube_automation/_claude_md/CLAUDE.template.md"

# templates/*.md はパッケージディレクトリ内なので packages 設定で同梱される

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    ".claude/skills/",
    ".claude/CLAUDE.template.md",
    "auth/SETUP.md",
    "auth/client_secrets_template.json",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
