[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-channels-automation"
version = "5.5.12"
description = "YouTube channel automation toolkit - analytics, AI content generation, and auto-upload"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "daiki-beppu"}]
dependencies = [
    "google-api-python-client>=2,<3",
    "google-auth-oauthlib>=1,<2",
    "google-auth-httplib2>=0.3,<1",
    "google-genai>=1,<2",
    "openai>=2,<3",
    "Pillow>=12,<13",
    "python-dotenv>=1,<2",
    "pandas>=3,<4",
    "matplotlib>=3,<4",
    "japanize-matplotlib>=1,<2",
    "seaborn>=0.13,<1",
    "schedule>=1,<2",
    "pyyaml>=6,<7",
    "requests>=2,<3",
]

[project.urls]
Repository = "https://github.com/daiki-beppu/youtube-automation"

[project.optional-dependencies]
dev = ["pytest>=9,<10", "ruff>=0.15,<1"]
veo = []  # google-genai, Pillow moved to main dependencies

[project.scripts]
# CLI script entry points (yt-* prefix)
yt-analytics = "youtube_automation.scripts.analytics_system:main"
yt-apply-rain-layers = "youtube_automation.scripts.apply_rain_layers:main"
yt-benchmark-collect = "youtube_automation.scripts.benchmark_collector:main"
yt-benchmark-comments = "youtube_automation.scripts.fetch_benchmark_comments:main"
yt-bulk-update-desc = "youtube_automation.scripts.bulk_update_descriptions_from_md:main"
yt-bulk-update-synthetic-media = "youtube_automation.scripts.bulk_update_synthetic_media:main"
yt-channel-init = "youtube_automation.cli.channel_init:main"
yt-channel-seed = "youtube_automation.scripts.channel_seed:main"
yt-channel-settings = "youtube_automation.scripts.channel_settings_cli:main"
yt-channel-status = "youtube_automation.scripts.get_channel_status:main"
yt-channel-trend = "youtube_automation.scripts.channel_trend:main"
yt-collection-serve = "youtube_automation.scripts.collection_serve:main"
yt-comments-reply = "youtube_automation.scripts.comment_reply:main"
yt-config-migrate = "youtube_automation.cli.config_migrate:main"
yt-cost-report = "youtube_automation.cli.cost_report:main"
yt-discover-competitors = "youtube_automation.scripts.discover_competitors:main"
yt-distrokid-migrate = "youtube_automation.cli.distrokid_migrate:main"
yt-distrokid-prepare = "youtube_automation.scripts.distrokid_prepare:main"
yt-doctor = "youtube_automation.cli.doctor:main"
yt-fetch-stream-key = "youtube_automation.scripts.fetch_stream_key:main"
yt-finalize-master = "youtube_automation.scripts.finalize_master:main"
yt-fix-timestamps = "youtube_automation.scripts.fix_per_theme_timestamps:main"
yt-generate-image = "youtube_automation.scripts.generate_image:main"
yt-generate-loop-video = "youtube_automation.scripts.generate_loop_video:main"
yt-generate-lyria-master = "youtube_automation.scripts.generate_lyria_master:main"
yt-generate-master = "youtube_automation.scripts.generate_master:main"
yt-generate-suno = "youtube_automation.scripts.generate_suno_prompts:main"
yt-init-collection = "youtube_automation.scripts.init_collection:main"
yt-launch-curve = "youtube_automation.scripts.launch_curve:main"
yt-metadata-audit = "youtube_automation.scripts.metadata_audit:main"
yt-pinned-comment = "youtube_automation.scripts.pinned_comment:main"
yt-playlist-manager = "youtube_automation.scripts.playlist_manager:main"
yt-playlist-status = "youtube_automation.scripts.playlist_status:main"
yt-populate-scene-phrases = "youtube_automation.scripts.populate_scene_phrases:main"
yt-stock-archive = "youtube_automation.scripts.stock_archive:main"
yt-stock-list = "youtube_automation.scripts.stock_list:main"
yt-stock-preview = "youtube_automation.scripts.stock_preview:main"
yt-stock-prune = "youtube_automation.scripts.stock_prune:main"
yt-stream-archive-check = "youtube_automation.scripts.streaming_archive_check:main"
yt-stream-bandwidth = "youtube_automation.cli.stream_bandwidth:main"
yt-theme-compare = "youtube_automation.scripts.theme_compare:main"
yt-thumbnail-check = "youtube_automation.scripts.thumbnail_check:main"
yt-thumbnail-compare = "youtube_automation.scripts.compare_thumbnails:main"
yt-thumbnail-correlate = "youtube_automation.scripts.thumbnail_correlate:main"
yt-title-duplicate-check = "youtube_automation.scripts.title_duplicate_check:main"
yt-video-analyze = "youtube_automation.scripts.video_analyze:main"
yt-vote-log = "youtube_automation.scripts.vote_log:main"

# Agent entry points
yt-upload-auto = "youtube_automation.agents.youtube_auto_uploader:main"
yt-upload-collection = "youtube_automation.agents.collection_uploader:main"
yt-upload-shorts = "youtube_automation.agents.short_uploader:main"

# Shorts script entry points
yt-generate-shorts-loop = "youtube_automation.scripts.generate_short_loop:main"
yt-shorts-bulk-update-loc = "youtube_automation.scripts.bulk_update_short_localizations:main"

# Skill management
yt-skills = "youtube_automation.cli.skills_sync:main"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_automation"]

[tool.hatch.build.targets.wheel.force-include]
# Claude Code スキルファイルをパッケージ内 _skills/ として同梱
# (yt-skills sync --asset skills が importlib.resources で参照する)
".claude/skills" = "youtube_automation/_skills"
# BGM チャンネル運営方針テンプレ (CLAUDE.md) を _claude_md/ として同梱
# (yt-skills sync --asset claude-md が importlib.resources で参照する)
".claude/CLAUDE.template.md" = "youtube_automation/_claude_md/CLAUDE.template.md"
# workflow チートシート / 全 skill カタログを _docs/ として同梱
# (yt-skills sync --asset workflow-cheatsheet / features が importlib.resources で参照する)
# 配布された SKILL.md / CLAUDE.md の相対 link が install 版と同 version の docs/ を指せる
"docs/workflow-cheatsheet.md" = "youtube_automation/_docs/workflow-cheatsheet.md"
"docs/features.md" = "youtube_automation/_docs/features.md"

# templates/*.md はパッケージディレクトリ内なので packages 設定で同梱される

[tool.hatch.build.targets.sdist]
skip-excluded-dirs = true
include = [
    "src/",
    "tests/",
    ".claude/CLAUDE.template.md",
    "docs/workflow-cheatsheet.md",
    "docs/features.md",
    "auth/SETUP.md",
    "auth/client_secrets_template.json",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".agents/",
]

[tool.hatch.build.targets.sdist.force-include]
".claude/skills" = ".claude/skills"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
