[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-channels-automation"
version = "5.5.17"
description = "YouTube channel automation toolkit - analytics, AI content generation, and auto-upload"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "daiki-beppu"}]
dependencies = [
    "google-api-python-client>=2,<3",
    "google-auth-oauthlib>=1,<2",
    "google-auth-httplib2>=0.3,<1",
    "google-genai>=1,<2",
    "httpx>=0.28,<1",
    "openai>=2,<3",
    "Pillow>=12.2.0,<13",
    "python-dotenv>=1,<2",
    "pandas>=3,<4",
    "matplotlib>=3,<4",
    "japanize-matplotlib>=1,<2",
    "schedule>=1,<2",
    "pyyaml>=6,<7",
    "requests>=2,<3",
]

[project.urls]
Repository = "https://github.com/daiki-beppu/youtube-automation"

[project.optional-dependencies]
veo = []  # google-genai, Pillow moved to main dependencies

[project.scripts]
yt-audio-visualizer-fill = "youtube_automation.cli_entrypoints:yt_audio_visualizer_fill"
# CLI script entry points (yt-* prefix)
yt-analytics = "youtube_automation.cli_entrypoints:yt_analytics"
yt-apply-rain-layers = "youtube_automation.cli_entrypoints:yt_apply_rain_layers"
yt-automation-update = "youtube_automation.cli_entrypoints:yt_automation_update"
yt-benchmark-collect = "youtube_automation.cli_entrypoints:yt_benchmark_collect"
yt-benchmark-comments = "youtube_automation.cli_entrypoints:yt_benchmark_comments"
yt-bulk-update-desc = "youtube_automation.cli_entrypoints:yt_bulk_update_desc"
yt-bulk-update-synthetic-media = "youtube_automation.cli_entrypoints:yt_bulk_update_synthetic_media"
yt-captions-upload = "youtube_automation.cli_entrypoints:yt_captions_upload"
yt-channel-init = "youtube_automation.cli_entrypoints:yt_channel_init"
yt-channel-seed = "youtube_automation.cli_entrypoints:yt_channel_seed"
yt-channel-settings = "youtube_automation.cli_entrypoints:yt_channel_settings"
yt-channel-status = "youtube_automation.cli_entrypoints:yt_channel_status"
yt-channel-trend = "youtube_automation.cli_entrypoints:yt_channel_trend"
yt-collection-preflight = "youtube_automation.cli_entrypoints:yt_collection_preflight"
yt-collection-serve = "youtube_automation.cli_entrypoints:yt_collection_serve"
yt-comments-reply = "youtube_automation.cli_entrypoints:yt_comments_reply"
yt-cost-report = "youtube_automation.cli_entrypoints:yt_cost_report"
yt-discover-competitors = "youtube_automation.cli_entrypoints:yt_discover_competitors"
yt-distrokid-migrate = "youtube_automation.cli_entrypoints:yt_distrokid_migrate"
yt-distrokid-prepare = "youtube_automation.cli_entrypoints:yt_distrokid_prepare"
yt-doctor = "youtube_automation.cli_entrypoints:yt_doctor"
yt-fetch-stream-key = "youtube_automation.cli_entrypoints:yt_fetch_stream_key"
yt-finalize-master = "youtube_automation.cli_entrypoints:yt_finalize_master"
yt-generate-image = "youtube_automation.cli_entrypoints:yt_generate_image"
yt-generate-loop-video = "youtube_automation.cli_entrypoints:yt_generate_loop_video"
yt-generate-lyria-master = "youtube_automation.cli_entrypoints:yt_generate_lyria_master"
yt-generate-master = "youtube_automation.cli_entrypoints:yt_generate_master"
yt-generate-videos-batch = "youtube_automation.cli_entrypoints:yt_generate_videos_batch"
yt-generate-suno = "youtube_automation.cli_entrypoints:yt_generate_suno"
yt-init-collection = "youtube_automation.cli_entrypoints:yt_init_collection"
yt-kpi-dashboard = "youtube_automation.cli_entrypoints:yt_kpi_dashboard"
yt-launch-curve = "youtube_automation.cli_entrypoints:yt_launch_curve"
yt-metadata-audit = "youtube_automation.cli_entrypoints:yt_metadata_audit"
yt-oauth = "youtube_automation.cli_entrypoints:yt_oauth"
yt-pinned-comment = "youtube_automation.cli_entrypoints:yt_pinned_comment"
yt-playlist-manager = "youtube_automation.cli_entrypoints:yt_playlist_manager"
yt-playlist-status = "youtube_automation.cli_entrypoints:yt_playlist_status"
yt-populate-scene-phrases = "youtube_automation.cli_entrypoints:yt_populate_scene_phrases"
yt-preflight = "youtube_automation.cli_entrypoints:yt_preflight"
yt-raw-master-check = "youtube_automation.cli_entrypoints:yt_raw_master_check"
yt-retention-timeline = "youtube_automation.cli_entrypoints:yt_retention_timeline"
yt-stock-archive = "youtube_automation.cli_entrypoints:yt_stock_archive"
yt-stock-list = "youtube_automation.cli_entrypoints:yt_stock_list"
yt-stock-preview = "youtube_automation.cli_entrypoints:yt_stock_preview"
yt-stock-prune = "youtube_automation.cli_entrypoints:yt_stock_prune"
yt-suno-audio-cleanup = "youtube_automation.cli_entrypoints:yt_suno_audio_cleanup"
yt-suno-select-tracks = "youtube_automation.cli_entrypoints:yt_suno_select_tracks"
yt-suno-verify = "youtube_automation.cli_entrypoints:yt_suno_verify"
yt-suno-verify-playlist = "youtube_automation.cli_entrypoints:yt_suno_verify_playlist"
yt-stream-archive-check = "youtube_automation.cli_entrypoints:yt_stream_archive_check"
yt-stream-bandwidth = "youtube_automation.cli_entrypoints:yt_stream_bandwidth"
yt-theme-compare = "youtube_automation.cli_entrypoints:yt_theme_compare"
yt-ttp-health = "youtube_automation.cli_entrypoints:yt_ttp_health"
yt-thumbnail-auto-select = "youtube_automation.cli_entrypoints:yt_thumbnail_auto_select"
yt-thumbnail-check = "youtube_automation.cli_entrypoints:yt_thumbnail_check"
yt-thumbnail-compare = "youtube_automation.cli_entrypoints:yt_thumbnail_compare"
yt-thumbnail-correlate = "youtube_automation.cli_entrypoints:yt_thumbnail_correlate"
yt-thumbnail-text = "youtube_automation.cli_entrypoints:yt_thumbnail_text"
yt-title-duplicate-check = "youtube_automation.cli_entrypoints:yt_title_duplicate_check"
yt-traffic-trend = "youtube_automation.cli_entrypoints:yt_traffic_trend"
yt-video-analyze = "youtube_automation.cli_entrypoints:yt_video_analyze"
yt-vote-log = "youtube_automation.cli_entrypoints:yt_vote_log"
yt-wf-batch = "youtube_automation.cli_entrypoints:yt_wf_batch"

# Agent entry points
yt-upload-auto = "youtube_automation.cli_entrypoints:yt_upload_auto"
yt-upload-collection = "youtube_automation.cli_entrypoints:yt_upload_collection"
yt-upload-shorts = "youtube_automation.cli_entrypoints:yt_upload_shorts"

# Shorts script entry points
yt-generate-shorts-loop = "youtube_automation.cli_entrypoints:yt_generate_shorts_loop"
yt-shorts-bulk-update-loc = "youtube_automation.cli_entrypoints:yt_shorts_bulk_update_loc"

# Skill management
yt-skills = "youtube_automation.cli_entrypoints:yt_skills"
yt-setup-dirs = "youtube_automation.cli_entrypoints:yt_setup_dirs"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_automation"]

[tool.hatch.build.targets.wheel.force-include]
# Claude Code スキルファイルをパッケージ内 _skills/ として同梱
# (yt-skills sync --asset skills が importlib.resources で参照する)
".claude/skills" = "youtube_automation/_skills"
# BGM チャンネル運営方針テンプレ (CLAUDE.md) を _claude_md/ として同梱
# (yt-skills sync --asset claude-md が importlib.resources で参照する)
".claude/CLAUDE.template.md" = "youtube_automation/_claude_md/CLAUDE.template.md"
# workflow チートシート / 全 skill カタログを _docs/ として同梱
# (yt-skills sync --asset workflow-cheatsheet / features が importlib.resources で参照する)
# 配布された SKILL.md / CLAUDE.md の相対 link が install 版と同 version の docs/ を指せる
"docs/workflow-cheatsheet.md" = "youtube_automation/_docs/workflow-cheatsheet.md"
"docs/features.md" = "youtube_automation/_docs/features.md"
"auth/client_secrets.template.json" = "youtube_automation/_auth/client_secrets.template.json"

# templates/*.md はパッケージディレクトリ内なので packages 設定で同梱される

[tool.hatch.build.targets.sdist]
skip-excluded-dirs = true
include = [
    "src/",
    "tests/",
    ".claude/CLAUDE.template.md",
    "docs/workflow-cheatsheet.md",
    "docs/features.md",
    "auth/SETUP.md",
    "auth/client_secrets.template.json",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".agents/",
]

[tool.hatch.build.targets.sdist.force-include]
".claude/skills" = ".claude/skills"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "RUF"]
# RUF001/002/003: 日本語コードベースのため全角文字の ambiguous-unicode 検知は誤検知のみ
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# pytest.raises(match=...) の正規表現メタ文字警告はテスト可読性を優先して抑制
"tests/**" = ["RUF043"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-xdist>=3.8,<4",
    "ruff>=0.15,<1",
]
